--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -410,17 +410,17 @@
       - BoxBeanbag
       - BoxShotgunIncendiary
       - BoxShotgunUranium
-      - BoxShellTranquilizer # Frontier
-      - ExplosivePayload # Frontier
-      - GrenadeBlast # Frontier
-      - GrenadeEMP # Frontier
-      - GrenadeFlash # Frontier
-      - HoloprojectorSecurity # Frontier
-      - MagazineBoxLightRifleIncendiary # Frontier
-      - MagazineBoxLightRifleUranium # Frontier
-      - MagazineBoxMagnumIncendiary # Frontier
-      - MagazineBoxMagnumUranium # Frontier
-      - MagazineBoxPistolIncendiary # Frontier
+      - BoxShellTranquilizer
+      - ExplosivePayload
+      - GrenadeBlast
+      - GrenadeEMP
+      - GrenadeFlash
+      - HoloprojectorSecurity
+      - MagazineBoxLightRifleIncendiary
+      - MagazineBoxLightRifleUranium
+      - MagazineBoxMagnumIncendiary
+      - MagazineBoxMagnumUranium
+      - MagazineBoxPistolIncendiary
       - MagazineBoxPistolUranium
       - MagazineBoxRifleIncendiary
       - MagazineBoxRifleUranium
@@ -433,18 +433,19 @@
       - MagazineRifleUranium
       - MagazineShotgunBeanbag
       - MagazineShotgunIncendiary
+      - MagazineShotgunIncendiary
       - PortableRecharger
       - PowerCageHigh
       - PowerCageMedium
       - PowerCageSmall
       - SpeedLoaderMagnumIncendiary
       - SpeedLoaderMagnumUranium
-      - TelescopicShield # Frontier
-      - Truncheon # Frontier
-      - WeaponAdvancedLaser # Frontier
-      - WeaponLaserCannon # Frontier
-      - WeaponLaserCarbine # Frontier
-      - WeaponXrayCannon # Frontier
+      - TelescopicShield
+      - Truncheon
+      - WeaponAdvancedLaser
+      - WeaponLaserCannon
+      - WeaponLaserCarbine
+      - WeaponXrayCannon
       - SpeedLoaderRifleHeavyIncendiary # Frontier
       - SpeedLoaderRifleHeavyUranium # Frontier
 
@@ -871,10 +872,6 @@
       - MagazineBoxPistolUranium
       - MagazineBoxRifleIncendiary
       - MagazineBoxRifleUranium
-      - MagazineBoxLightRifleRubber # Frontier
-      - MagazineBoxMagnumRubber # Frontier
-      - MagazineBoxPistolRubber # Frontier
-      - MagazineBoxRifleRubber # Frontier
       - MagazineGrenadeEmpty
       - MagazineLightRifleIncendiary
       - MagazineLightRifleUranium
@@ -896,18 +893,22 @@
       - SignalTrigger
       - SpeedLoaderMagnumIncendiary
       - SpeedLoaderMagnumUranium
-      - SpeedLoaderRifleHeavyIncendiary # Frontier
-      - SpeedLoaderRifleHeavyUranium # Frontier
       - TelescopicShield
       - TimerTrigger
       - Truncheon
       - VoiceTrigger
       - WeaponAdvancedLaser
-#      - WeaponDisabler
-#      - WeaponDisablerSMG
+      - WeaponDisabler
+      - WeaponDisablerSMG
       - WeaponLaserCannon
       - WeaponLaserCarbine
       - WeaponXrayCannon
+      - SpeedLoaderRifleHeavyIncendiary # Frontier
+      - SpeedLoaderRifleHeavyUranium # Frontier
+      - MagazineBoxLightRifleRubber # Frontier
+      - MagazineBoxMagnumRubber # Frontier
+      - MagazineBoxPistolRubber # Frontier
+      - MagazineBoxRifleRubber # Frontier
   - type: MaterialStorage
     whitelist:
       tags:
@@ -961,8 +962,6 @@
         - SpeedLoaderMagnumEmpty
         - SpeedLoaderRifleHeavy # Frontier
         - SpeedLoaderRifleHeavyEmpty # Frontier
-        - 10roundmagazine #frontier by VividPups
-        - 10roundmagazineempty #frontier by VividPups
     - type: MaterialStorage
       whitelist:
         tags:
@@ -1037,7 +1036,6 @@
       - ClothingOuterHardsuitVoidParamed # Frontier
       - BaseChemistryEmptyVial # Frontier
       - PowerCellSmall # Frontier
-
     dynamicRecipes:
       - VialBluespace # Frontier
       - ChemicalPayload
