--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_general.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_general.yml
@@ -213,7 +213,7 @@
     - ClosetBomb
     - ClosetRadiationSuit
     - ClosetL3
-    - ClosetBombFilled
+    - NFClosetBombFilled
     - ClosetRadiationSuitFilled
     - ClosetL3Filled
     - SpawnDungeonLootSuitStorageUnitsGeneral
