--- a/Resources/Maps/_NF/Bluespace/vault.yml
+++ b/Resources/Maps/_NF/Bluespace/vault.yml
@@ -6101,7 +6101,7 @@ entities:
     - type: Transform
       pos: 2.5,12.5
       parent: 1
-- proto: LockerSecurityFilled
+- proto: NFLockerSecurityFilled
   entities:
   - uid: 1062
     components:
