--- a/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
@@ -336,9 +336,9 @@
   components:
   - type: StorageFill
     contents:
-    - id: WeaponSVT
+    - id: WeaponRifleSVT
       amount: 1
-    - id: 10roundmagazine
+    - id: CartridgeLightRifle
       amount: 2 
 
 # Energy
