--- a/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks_punk.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks_punk.yml
@@ -6,15 +6,14 @@
   description: A close-fitting breathing mask with gamer lights!
   suffix: Random visuals
   components:
-  - type: BreathMask
   - type: Sprite
     sprite: _NF/Clothing/Mask/punkhalfmask.rsi
     layers:
-    - state: base_halfmask_01
+    - state: equipped-MASK
       map: [ "mask_main" ]
       scale: 2, 2
       offset: 0,-0.6
-    - state: decor_base_halfmask_01
+    - state: decor-equipped-MASK
       map: [ "mask_decor" ]
       shader: unshaded
       scale: 2, 2
@@ -23,14 +22,14 @@
     sprite: _NF/Clothing/Mask/punkhalfmask.rsi
     clothingVisuals:
       mask:
-      - state: base_halfmask_01
+      - state: equipped-MASK
         map: [ "mask_main" ]
-      - state: decor_base_halfmask_01
+      - state: decor-equipped-MASK
         map: [ "mask_decor" ]
         shader: unshaded
   - type: RandomSprite
     available:
     - mask_main:
-        base_halfmask_01: CyberpunkDark
+        equipped-MASK: CyberpunkDark
       mask_decor:
-        decor_base_halfmask_01: CyberpunkNeon
+        decor-equipped-MASK: CyberpunkNeon
