--- a/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks_blood_cult.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks_blood_cult.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent:
   - BaseC3CultContrabandUnredeemable
-  - ClothingMaskPullableBase
+  - ClothingMaskGasExplorer
   - ContrabandClothing
   id: ClothingMaskCultJanitor
   name: cult janitor mask
@@ -11,15 +11,6 @@
     sprite: _NF/Clothing/Mask/cult_janitor_mask.rsi
   - type: Clothing
     sprite: _NF/Clothing/Mask/cult_janitor_mask.rsi
-  - type: BreathMask
-  - type: IdentityBlocker
-  - type: Armor
-    modifiers:
-      coefficients:
-        Blunt: 0.90
-        Slash: 0.90
-        Piercing: 0.90
-        Heat: 0.90
   - type: HideLayerClothing
     slots:
     - Hair
