Added Honker and Sparrow to guidebook

--- a/Resources/Prototypes/_NF/Guidebook/shipyard.yml
+++ b/Resources/Prototypes/_NF/Guidebook/shipyard.yml
@@ -24,6 +24,7 @@
   - ShipyardHammer
   - ShipyardHauler
   - ShipyardHarbormaster
+  - ShipyardHonker
   - ShipyardInvestigator
   - ShipyardKestrel
   - ShipyardKilderkin
@@ -37,6 +38,7 @@
   - ShipyardPioneer
   - ShipyardProspector
   - ShipyardSearchlight
+  - ShipyardSparrow
   - ShipyardSpirit
   - ShipyardStasis
   - ShipyardVagabond
@@ -142,6 +144,11 @@
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Hauler.xml"
 
 - type: guideEntry
+  id: ShipyardHonker
+  name: guide-entry-shipyard-honker
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Honker.xml"
+
+- type: guideEntry
   id: ShipyardInvestigator
   name: guide-entry-shipyard-investigator
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Investigator.xml"
@@ -205,6 +212,11 @@
   id: ShipyardSearchlight
   name: guide-entry-shipyard-searchlight
   text: "/ServerInfo/_NF/Guidebook/Shipyard/Searchlight.xml"
+
+- type: guideEntry
+  id: ShipyardSparrow
+  name: guide-entry-shipyard-sparrow
+  text: "/ServerInfo/_NF/Guidebook/Shipyard/Sparrow.xml"
 
 - type: guideEntry
   id: ShipyardSpirit
