no freezer, NFSD bomb cabinet, jani crates, mags

--- a/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Items/weapon_cases_expedition.yml
@@ -338,7 +338,7 @@
     contents:
     - id: WeaponRifleSVT
       amount: 1
-    - id: CartridgeLightRifle
+    - id: MagazineLightRifleLowCapacity
       amount: 2 
 
 # Energy
