Fix missing "contrablade" reference

--- a/Resources/Prototypes/_NF/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_NF/Catalog/uplink_catalog.yml
@@ -14,7 +14,7 @@
   name:  uplink-spaceblade-syndicate-name
   description: uplink-spaceblade-syndicate-desc
   productEntity: SpaceBladeSec
-  icon: { sprite: _NF/Objects/Fun/spaceblade.rsi, state: contrablade }
+  icon: { sprite: _NF/Objects/Fun/spaceblade.rsi, state: contraband }
   cost:
     Telecrystal: 1
   categories:
