--- a/Resources/Prototypes/_NF/Traits/speech.yml
+++ b/Resources/Prototypes/_NF/Traits/speech.yml
@@ -19,3 +19,12 @@
   cost: 2
   components:
     - type: GoblinAccent
+
+- type: trait
+  id: CatAccent
+  name: trait-cat-accent-name
+  description: trait-cat-accent-desc
+  category: SpeechTraits
+  cost: 2
+  components:
+    - type: CatAccent
