--- a/Resources/Prototypes/_NF/Accents/word_replacements.yml
+++ b/Resources/Prototypes/_NF/Accents/word_replacements.yml
@@ -777,3 +777,107 @@
     accent-streetpunk-replaced-341: accent-streetpunk-replacement-341
     accent-streetpunk-replaced-342: accent-streetpunk-replacement-342
     accent-streetpunk-replaced-343: accent-streetpunk-replacement-343
+
+- type: accent
+  id: cat_accent
+  wordReplacements:
+    accent-cat-words-1: accent-cat-words-replace-1
+    accent-cat-words-2: accent-cat-words-replace-2
+    accent-cat-words-3: accent-cat-words-replace-3
+    accent-cat-words-4: accent-cat-words-replace-4
+    accent-cat-words-5: accent-cat-words-replace-5
+    accent-cat-words-6: accent-cat-words-replace-6
+    accent-cat-words-7: accent-cat-words-replace-7
+    accent-cat-words-8: accent-cat-words-replace-8
+    accent-cat-words-9: accent-cat-words-replace-9
+    accent-cat-words-10: accent-cat-words-replace-10
+    accent-cat-words-11: accent-cat-words-replace-11
+    accent-cat-words-12: accent-cat-words-replace-12
+    accent-cat-words-13: accent-cat-words-replace-13
+    accent-cat-words-14: accent-cat-words-replace-14
+    accent-cat-words-15: accent-cat-words-replace-15
+    accent-cat-words-16: accent-cat-words-replace-16
+    accent-cat-words-17: accent-cat-words-replace-17
+    accent-cat-words-18: accent-cat-words-replace-18
+    accent-cat-words-19: accent-cat-words-replace-19
+    accent-cat-words-20: accent-cat-words-replace-20
+    accent-cat-words-21: accent-cat-words-replace-21
+    accent-cat-words-22: accent-cat-words-replace-22
+    accent-cat-words-23: accent-cat-words-replace-23
+    accent-cat-words-24: accent-cat-words-replace-24
+    accent-cat-words-25: accent-cat-words-replace-25
+    accent-cat-words-26: accent-cat-words-replace-26
+    accent-cat-words-27: accent-cat-words-replace-27
+    accent-cat-words-28: accent-cat-words-replace-28
+    accent-cat-words-29: accent-cat-words-replace-29
+    accent-cat-words-30: accent-cat-words-replace-30
+    accent-cat-words-31: accent-cat-words-replace-31
+    accent-cat-words-32: accent-cat-words-replace-32
+    accent-cat-words-33: accent-cat-words-replace-33
+    accent-cat-words-34: accent-cat-words-replace-34
+    accent-cat-words-35: accent-cat-words-replace-35
+    accent-cat-words-36: accent-cat-words-replace-36
+    accent-cat-words-37: accent-cat-words-replace-37
+    accent-cat-words-38: accent-cat-words-replace-38
+    accent-cat-words-39: accent-cat-words-replace-39
+    accent-cat-words-40: accent-cat-words-replace-40
+    accent-cat-words-41: accent-cat-words-replace-41
+    accent-cat-words-42: accent-cat-words-replace-42
+    accent-cat-words-43: accent-cat-words-replace-43
+    accent-cat-words-44: accent-cat-words-replace-44
+    accent-cat-words-45: accent-cat-words-replace-45
+    accent-cat-words-46: accent-cat-words-replace-46
+    accent-cat-words-47: accent-cat-words-replace-47
+    accent-cat-words-48: accent-cat-words-replace-48
+    accent-cat-words-49: accent-cat-words-replace-49
+    accent-cat-words-50: accent-cat-words-replace-50
+    accent-cat-words-51: accent-cat-words-replace-51
+    accent-cat-words-52: accent-cat-words-replace-52
+    accent-cat-words-53: accent-cat-words-replace-53
+    accent-cat-words-54: accent-cat-words-replace-54
+    accent-cat-words-55: accent-cat-words-replace-55
+    accent-cat-words-56: accent-cat-words-replace-56
+    accent-cat-words-57: accent-cat-words-replace-57
+    accent-cat-words-58: accent-cat-words-replace-58
+    accent-cat-words-59: accent-cat-words-replace-59
+    accent-cat-words-60: accent-cat-words-replace-60
+    accent-cat-words-61: accent-cat-words-replace-61
+    accent-cat-words-62: accent-cat-words-replace-62
+    accent-cat-words-63: accent-cat-words-replace-63
+    accent-cat-words-64: accent-cat-words-replace-64
+    accent-cat-words-65: accent-cat-words-replace-65
+    accent-cat-words-66: accent-cat-words-replace-66
+    accent-cat-words-67: accent-cat-words-replace-67
+    accent-cat-words-68: accent-cat-words-replace-68
+    accent-cat-words-69: accent-cat-words-replace-69
+    accent-cat-words-70: accent-cat-words-replace-70
+    accent-cat-words-71: accent-cat-words-replace-71
+    accent-cat-words-72: accent-cat-words-replace-72
+    accent-cat-words-73: accent-cat-words-replace-73
+    accent-cat-words-74: accent-cat-words-replace-74
+    accent-cat-words-75: accent-cat-words-replace-75
+    accent-cat-words-76: accent-cat-words-replace-76
+    accent-cat-words-77: accent-cat-words-replace-77
+    accent-cat-words-78: accent-cat-words-replace-78
+    accent-cat-words-79: accent-cat-words-replace-79
+    accent-cat-words-80: accent-cat-words-replace-80
+    accent-cat-words-81: accent-cat-words-replace-81
+    accent-cat-words-82: accent-cat-words-replace-82
+    accent-cat-words-83: accent-cat-words-replace-83
+    accent-cat-words-84: accent-cat-words-replace-84
+    accent-cat-words-85: accent-cat-words-replace-85
+    accent-cat-words-86: accent-cat-words-replace-86
+    accent-cat-words-87: accent-cat-words-replace-87
+    accent-cat-words-88: accent-cat-words-replace-88
+    accent-cat-words-89: accent-cat-words-replace-89
+    accent-cat-words-90: accent-cat-words-replace-90
+    accent-cat-words-91: accent-cat-words-replace-91
+    accent-cat-words-92: accent-cat-words-replace-92
+    accent-cat-words-93: accent-cat-words-replace-93
+    accent-cat-words-94: accent-cat-words-replace-94
+    accent-cat-words-95: accent-cat-words-replace-95
+    accent-cat-words-96: accent-cat-words-replace-96
+    accent-cat-words-97: accent-cat-words-replace-97
+    accent-cat-words-98: accent-cat-words-replace-98
+    accent-cat-words-99: accent-cat-words-replace-99
+    accent-cat-words-100: accent-cat-words-replace-100
