--- a/Resources/Prototypes/_NF/Accents/word_replacements.yml
+++ b/Resources/Prototypes/_NF/Accents/word_replacements.yml
@@ -810,4 +810,69 @@
     accent-caveman-replaced-26: accent-caveman-replacement-26
     accent-caveman-replaced-27: accent-caveman-replacement-27
     accent-caveman-replaced-28: accent-caveman-replacement-28
-
+    accent-caveman-replaced-29: accent-caveman-replacement-29
+    accent-caveman-replaced-30: accent-caveman-replacement-30
+    accent-caveman-replaced-31: accent-caveman-replacement-31
+    accent-caveman-replaced-32: accent-caveman-replacement-32
+    accent-caveman-replaced-33: accent-caveman-replacement-33
+    accent-caveman-replaced-34: accent-caveman-replacement-34
+    accent-caveman-replaced-35: accent-caveman-replacement-35
+    accent-caveman-replaced-36: accent-caveman-replacement-36
+    accent-caveman-replaced-37: accent-caveman-replacement-37
+    accent-caveman-replaced-38: accent-caveman-replacement-38
+    accent-caveman-replaced-39: accent-caveman-replacement-39
+    accent-caveman-replaced-40: accent-caveman-replacement-40
+    accent-caveman-replaced-41: accent-caveman-replacement-41
+    accent-caveman-replaced-42: accent-caveman-replacement-42
+    accent-caveman-replaced-43: accent-caveman-replacement-43
+    accent-caveman-replaced-44: accent-caveman-replacement-44
+    accent-caveman-replaced-45: accent-caveman-replacement-45
+    accent-caveman-replaced-46: accent-caveman-replacement-46
+    accent-caveman-replaced-47: accent-caveman-replacement-47
+    accent-caveman-replaced-48: accent-caveman-replacement-48
+    accent-caveman-replaced-49: accent-caveman-replacement-49
+    accent-caveman-replaced-50: accent-caveman-replacement-50
+    accent-caveman-replaced-51: accent-caveman-replacement-51
+    accent-caveman-replaced-52: accent-caveman-replacement-52
+    accent-caveman-replaced-53: accent-caveman-replacement-53
+    accent-caveman-replaced-54: accent-caveman-replacement-54
+    accent-caveman-replaced-55: accent-caveman-replacement-55
+    accent-caveman-replaced-56: accent-caveman-replacement-56
+    accent-caveman-replaced-57: accent-caveman-replacement-57
+    accent-caveman-replaced-58: accent-caveman-replacement-58
+    accent-caveman-replaced-59: accent-caveman-replacement-59
+    accent-caveman-replaced-60: accent-caveman-replacement-60
+    accent-caveman-replaced-61: accent-caveman-replacement-61
+    accent-caveman-replaced-62: accent-caveman-replacement-62
+    accent-caveman-replaced-63: accent-caveman-replacement-63
+    accent-caveman-replaced-64: accent-caveman-replacement-64
+    accent-caveman-replaced-65: accent-caveman-replacement-65
+    accent-caveman-replaced-66: accent-caveman-replacement-66
+    accent-caveman-replaced-67: accent-caveman-replacement-67
+    accent-caveman-replaced-68: accent-caveman-replacement-68
+    accent-caveman-replaced-69: accent-caveman-replacement-69
+    accent-caveman-replaced-70: accent-caveman-replacement-70
+    accent-caveman-replaced-71: accent-caveman-replacement-71
+    accent-caveman-replaced-72: accent-caveman-replacement-72
+    accent-caveman-replaced-73: accent-caveman-replacement-73
+    accent-caveman-replaced-74: accent-caveman-replacement-74
+    accent-caveman-replaced-75: accent-caveman-replacement-75
+    accent-caveman-replaced-76: accent-caveman-replacement-76
+    accent-caveman-replaced-77: accent-caveman-replacement-77
+    # Forbidden words
+    accent-caveman-forbidden-0: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-1: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-2: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-3: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-4: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-5: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-6: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-7: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-8: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-9: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-10: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-11: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-12: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-13: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-14: accent-caveman-forbidden-empty
+    accent-caveman-forbidden-15: accent-caveman-forbidden-empty
