--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -533,7 +533,7 @@
           collection: MetalSlam
       - !type:DoActsBehavior
         acts: ["Destruction"]
-  - type: RCDDeconstructible # Frontier
+  - type: RCDDeconstructable # Frontier
     deconstructible: false # Frontier
 
 - type: entity
