Add some hours to roles for event

--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/deputy.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/deputy.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobSecurityOfficer
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 43200 # 12 hours
+      time: 43200000 # 12 hours
     - !type:DepartmentTimeRequirement
       department: Security
       time: 21600 # 6 hours
