--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/sheriff.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/sheriff.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobHeadOfSecurity
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 129600 # 36 hours
+      time: 129600000 # 36 hours
     - !type:DepartmentTimeRequirement
       department: Security
       time: 86400 # 24 hours
