--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/cadet.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/cadet.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobSecurityCadet
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 21600 # 6 hours
+      time: 21600000 # 6 hours
     - !type:DepartmentTimeRequirement
       department: Security
       time: 64800 # 18 hours
