Revert "Add some hours to roles for event"

--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/bailiff.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/bailiff.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobWarden
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 108000000 # 30 hours
+      time: 108000 # 30 hours
     - !type:DepartmentTimeRequirement
       department: Security
       time: 64800 # 18 hours
