--- a/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/senior_officer.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Nfsd/senior_officer.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobSeniorOfficer
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 1080000000 # 30 hours
+      time: 108000 # 30 hours
     - !type:DepartmentTimeRequirement
       department: Security
       time: 43200 # 18 hours
