--- a/Resources/Prototypes/_NF/Roles/Jobs/Pirates/pirate.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Pirates/pirate.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobPirate
   requirements:
     - !type:OverallPlaytimeRequirement
-      time: 86400000 # 24 hours
+      time: 86400 # 24 hours
     - !type:DepartmentTimeRequirement
       department: Security
       time: 10800 # 3 hrs
