--- a/Resources/Maps/_NF/Shuttles/crescent.yml
+++ b/Resources/Maps/_NF/Shuttles/crescent.yml
@@ -19384,6 +19384,61 @@ entities:
       parent: 1
 - proto: SurveillanceCameraGeneral
   entities:
+  - uid: 2647
+    components:
+    - type: Transform
+      pos: -21.5,39.5
+      parent: 1
+  - uid: 2648
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -29.5,16.5
+      parent: 1
+  - uid: 2649
+    components:
+    - type: Transform
+      pos: 22.5,39.5
+      parent: 1
+  - uid: 2659
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 10.5,5.5
+      parent: 1
+  - uid: 2660
+    components:
+    - type: Transform
+      pos: 3.5,-1.5
+      parent: 1
+  - uid: 2661
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 2.5,5.5
+      parent: 1
+  - uid: 2662
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -7.5,5.5
+      parent: 1
+  - uid: 2663
+    components:
+    - type: Transform
+      pos: -7.5,0.5
+      parent: 1
+  - uid: 2664
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -11.5,4.5
+      parent: 1
+  - uid: 2666
+    components:
+    - type: Transform
+      pos: -15.5,1.5
+      parent: 1
   - uid: 2681
     components:
     - type: Transform
@@ -19449,6 +19504,149 @@ entities:
       - SurveillanceCameraGeneral
       nameSet: True
       id: Blastdoor Camera
+  - uid: 2743
+    components:
+    - type: Transform
+      pos: -21.5,4.5
+      parent: 1
+  - uid: 2780
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -25.5,9.5
+      parent: 1
+  - uid: 2796
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -16.5,13.5
+      parent: 1
+  - uid: 3427
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -25.5,12.5
+      parent: 1
+  - uid: 3528
+    components:
+    - type: Transform
+      pos: -26.5,18.5
+      parent: 1
+  - uid: 3529
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -23.5,23.5
+      parent: 1
+  - uid: 3683
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -28.5,30.5
+      parent: 1
+  - uid: 3693
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -23.5,28.5
+      parent: 1
+  - uid: 3694
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -25.5,36.5
+      parent: 1
+  - uid: 3695
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -10.5,25.5
+      parent: 1
+  - uid: 3696
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -6.5,14.5
+      parent: 1
+  - uid: 3697
+    components:
+    - type: Transform
+      pos: 27.5,18.5
+      parent: 1
+  - uid: 3698
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 26.5,25.5
+      parent: 1
+  - uid: 3699
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 29.5,27.5
+      parent: 1
+  - uid: 3700
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 24.5,32.5
+      parent: 1
+  - uid: 3701
+    components:
+    - type: Transform
+      pos: 29.5,21.5
+      parent: 1
+  - uid: 3702
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: 29.5,33.5
+      parent: 1
+  - uid: 3703
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 13.5,15.5
+      parent: 1
+  - uid: 3704
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 9.5,22.5
+      parent: 1
+  - uid: 3705
+    components:
+    - type: Transform
+      pos: 6.5,29.5
+      parent: 1
+  - uid: 3706
+    components:
+    - type: Transform
+      pos: 6.5,24.5
+      parent: 1
+  - uid: 3707
+    components:
+    - type: Transform
+      pos: -5.5,21.5
+      parent: 1
+  - uid: 3708
+    components:
+    - type: Transform
+      rot: 1.5707963267948966 rad
+      pos: -12.5,16.5
+      parent: 1
+  - uid: 3709
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -11.5,8.5
+      parent: 1
+  - uid: 3710
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: 7.5,16.5
+      parent: 1
 - proto: SurveillanceCameraRouterGeneral
   entities:
   - uid: 2687
