Updates shutter links

--- a/Resources/Maps/_NF/Shuttles/skipper.yml
+++ b/Resources/Maps/_NF/Shuttles/skipper.yml
@@ -2703,6 +2703,16 @@ entities:
         - Pressed: Toggle
         18:
         - Pressed: Toggle
+        316:
+        - Pressed: Toggle
+        25:
+        - Pressed: Toggle
+        26:
+        - Pressed: Toggle
+        27:
+        - Pressed: Toggle
+        29:
+        - Pressed: Toggle
 - proto: Sink
   entities:
   - uid: 40
