add magic crayon

--- a/Resources/Prototypes/_NF/Loadouts/Jobs/Contractor/fun.yml
+++ b/Resources/Prototypes/_NF/Loadouts/Jobs/Contractor/fun.yml
@@ -193,3 +193,12 @@
   price: 10000
   inhand:
     - PetCarrierNPCEmotionalSupportSafe
+
+- type: loadout
+  id: ContractorMagicCrayon
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: ContractorT3
+  price: 30000
+  inhand:
+    - MagicCrayon
