--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -730,6 +730,7 @@
   - ContractorDawInstrumentFlatpack
   - ContractorHoverbikeFlatpack
   - ContractorEmotionalPetCarrier
+  - ContractorMagicCrayon
 
 - type: loadoutGroup
   id: ContractorFace
