--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -133,7 +133,7 @@
   name: Bowcaster
   parent: BaseItem
   id: WeaponBowcaster
-  description: From a galaxy far far away, S.E.S.W.C got their hands on this unqiue three bolt engery weapon. It was accdiently drop during transport.
+  description: From a galaxy far far away, S.E.S.W.C got their hands on this unqiue three bolt engery weapon. It was accidentally drop during transport.
   components:
   - type: Sprite
     sprite: _NF/Objects/Weapons/Guns/Battery/bowcaster.rsi
@@ -212,7 +212,7 @@
   name: SESWC X1 Vortex
   parent: WeaponLaserCarbinePractice
   id: WeaponAutoLaser
-  description: in progress
+  description: what in progess
   components:
   - type: Gun
     fireRate: 5
