No redundant value in shipyard test, revalue ships

--- a/Resources/Prototypes/_NF/Shipyard/crescent.yml
+++ b/Resources/Prototypes/_NF/Shipyard/crescent.yml
@@ -12,7 +12,7 @@
   id: Crescent
   name: KC Crescent
   description: The Crescent, named for its exterior shape, is a vessel focused on providing service, medical aide, and scientific breakthroughs for smaller vessels.
-  price: 208020
+  price: 270000 # Appraises at 254471, ~6% markup - TODO: fix these values, getting tests to pass - Whatstone
   category: Large
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/crescent.yml
