--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/weaponryworks.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/weaponryworks.yml
@@ -2,12 +2,12 @@
   id: WeaponryWorksVendInventory
   startingInventory:
     SurvivalKnife: 1
-    WeaponBrassKnuckles: 1 
-    WeaponLaserPistolNF: 1 
-    WeaponRifleGestio: 1 
-    WeaponRifleNovaliteC1: 1 
+    WeaponBrassKnuckles: 1
+    WeaponLaserPistolNF: 1
+    WeaponRifleGestio: 1
+    WeaponRifleNovaliteC1: 1
     WeaponShotgunDoubleBarreled: 1
-    WeaponRevolverArgenti: 1 
+    WeaponRevolverArgenti: 1
     BoxShotgunSlug: 1
     BoxLethalshot: 1
     BoxBeanbag: 1
@@ -35,6 +35,7 @@
     WeaponRifleNovaliteC1: 4294967295
     WeaponShotgunDoubleBarreled: 4294967295
     WeaponRevolverArgenti: 4294967295
+    WeaponHyperbuster: 4294967295
     BoxShotgunSlug: 4294967295
     BoxLethalshot: 4294967295
     BoxBeanbag: 4294967295
