--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_weapons.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_weapons.yml
@@ -184,6 +184,7 @@
     - WeaponCaseLongEnergyGunExpedition
     - WeaponCaseLongRepeaterExpedition
     - WeaponCaseLongSVTExpedition
+    - WeaponHyperbusterExpedition
     chance: 1.0
     offset: 0.0
     rarePrototypes:
@@ -272,7 +273,10 @@
     - WeaponCaseLongHristovExpedition
     - WeaponCaseShortSvalinnExpedition
     - WeaponCaseShortAdvancedLaserExpedition
+    - WeaponVortexExpedition
+    - WeaponBowcasterExpedition
     #- WeaponCaseLongMusketExpedition
+
     chance: 1.0
     offset: 0.0
     rarePrototypes:
