--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/expedition_guns.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/expedition_guns.yml
@@ -150,6 +150,27 @@
 
 - type: entity
   parent:
+  - BaseC2ExpeditionContraband
+  - WeaponHyperbuster
+  categories: [ HideSpawnMenu ]
+  id: WeaponHyperbusterExpedition
+
+- type: entity
+  parent:
+  - BaseC2ExpeditionContraband
+  - WeaponBowcaster
+  categories: [ HideSpawnMenu ]
+  id: WeaponBowcasterExpedition
+
+- type: entity
+  parent:
+  - BaseC3ExpeditionContraband
+  - WeaponVortex
+  categories: [ HideSpawnMenu ]
+  id: WeaponVortexExpedition
+
+- type: entity
+  parent:
   - BaseC3ExpeditionContraband
   - WeaponLaserCannon
   categories: [ HideSpawnMenu ]
