--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -408,6 +408,7 @@
       - WeaponRifleGestio
       - BaseBallBatNF
       - CrossbowModern
+      - WeaponHyperbuster
     ## Ammo boxes
       - BoxLethalshot
       - MagazineBoxLightRifle
