--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -166,3 +166,14 @@
     Glass: 500
     Plastic: 50
     Gold: 100
+
+- type: latheRecipe
+  id: WeaponHyperbuster
+  result: WeaponHyperbuster
+  category: Weapons
+  completetime: 5
+  materials:
+    Plasteel: 1500
+    Glass: 1000
+    Gold: 850
+    Plastic: 1000
