Infinite crayons, smaller magic crayon, attribs

--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -730,7 +730,7 @@
   - ContractorDawInstrumentFlatpack
   - ContractorHoverbikeFlatpack
   - ContractorEmotionalPetCarrier
-  - ContractorMagicCrayon
+  - ContractorCrayonMagic
 
 - type: loadoutGroup
   id: ContractorFace
