--- a/Resources/Prototypes/_NF/Loadouts/Jobs/Contractor/fun.yml
+++ b/Resources/Prototypes/_NF/Loadouts/Jobs/Contractor/fun.yml
@@ -195,10 +195,10 @@
     - PetCarrierNPCEmotionalSupportSafe
 
 - type: loadout
-  id: ContractorMagicCrayon
+  id: ContractorCrayonMagic
   effects:
   - !type:GroupLoadoutEffect
     proto: ContractorT3
   price: 30000
   inhand:
-    - MagicCrayon
+    - CrayonMagic
