--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/magic_crayon.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/magic_crayon.yml
@@ -2,7 +2,7 @@
   parent: CrayonRainbow
   id: CrayonMagic
   name: magic crayon
-  description: The product of blending crayons with bluspace crystals, now with new special not so magical flavors
+  description: Specially blended with bluespace crystals and certified non-toxic.
   components:
   - type: Sprite
     sprite: _NF/Objects/Fun/magic_crayon_small.rsi
