Plastic<Nothing (plastic banana, my mistake)

--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/magic_crayon.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/magic_crayon.yml
@@ -24,6 +24,5 @@
     solutions:
       food:
         reagents:
-        - ReagentId: Plastic
+        - ReagentId: Nothing
           Quantity: 40
-
