Frontier changelog: fix food recipe guidebook CL

--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -4254,7 +4254,9 @@ Entries:
   id: 5359
   time: '2024-10-03T19:53:08.0000000+00:00'
 - author: Mnemotechnician
-  changes: []
+  changes:
+    - type: Add
+      message: The Food Recipes page in the guidebook now shows all available recipes.
   id: 5360
   time: '2024-10-04T17:59:04.0000000+00:00'
 - author: dvir001
