--- a/.github/workflows/build-test-debug.yml
+++ b/.github/workflows/build-test-debug.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     types: [ opened, reopened, synchronize, ready_for_review ]
     branches: [ master ]
+  pull_request_target: # Frontier: only run tests on C# changes
+    paths: # Frontier
+      - "**/*.cs" # Frontier
 
 jobs:
   build:
