Reference correct guidebook page in ship yml

--- a/Resources/Prototypes/_NF/Shipyard/Expedition/charon.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Expedition/charon.yml
@@ -20,7 +20,7 @@
   category: Medium
   group: Expedition
   shuttlePath: /Maps/_NF/Shuttles/Expedition/charon.yml
-  guidebookPage: Null
+  guidebookPage: ShipyardCharon
   class:
   - Expedition
   
