--- a/Resources/Prototypes/_NF/Entities/Structures/atm.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/atm.yml
@@ -15,7 +15,7 @@
   abstract: true
   components:
   - type: BankATM
-    bank-ATM-cashSlot:
+    CashSlot:
       name: bank-ATM-cashSlot
       insertSound: /Audio/Machines/scanning.ogg
       ejectSound: /Audio/Machines/tray_eject.ogg
@@ -33,7 +33,8 @@
   - type: ItemSlots
   - type: ContainerContainer
     containers:
-      bank-ATM-cashSlot: !type:ContainerSlot {}
+      board: !type:Container
+      CashSlot: !type:ContainerSlot
 
 - type: entity
   name: withdraw-only bank ATM
@@ -43,7 +44,7 @@
   abstract: true
   components:
   - type: BankATM
-    bank-ATM-cashSlot:
+    CashSlot:
       name: bank-ATM-cashSlot
       insertSound: /Audio/Machines/scanning.ogg
       ejectSound: /Audio/Machines/tray_eject.ogg
@@ -175,7 +176,7 @@
     - map: ["computerLayerKeys"]
       state: id_key
   - type: StationBankATM
-    station-bank-ATM-cashSlot:
+    CashSlot:
       name: station-bank-ATM-cashSlot
       insertSound: /Audio/Machines/scanning.ogg
       ejectSound: /Audio/Machines/tray_eject.ogg
@@ -193,6 +194,7 @@
   - type: ItemSlots
   - type: ContainerContainer
     containers:
-      station-bank-ATM-cashSlot: !type:ContainerSlot {}
+      board: !type:Container
+      CashSlot: !type:ContainerSlot
   - type: AccessReader
     access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
