--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
@@ -38,7 +38,8 @@
   - type: ItemSlots
   - type: ContainerContainer
     containers:
-      ShipyardConsole-targetId: !type:ContainerSlot {}
+      board: !type:Container
+      ShipyardConsole-targetId: !type:ContainerSlot
 
 # Concrete consoles
 - type: entity
