--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
@@ -40,6 +40,8 @@
     containers:
       board: !type:Container
       ShipyardConsole-targetId: !type:ContainerSlot
+  - type: Computer
+    board: Null
 
 # Concrete consoles
 - type: entity
