--- a/Resources/Prototypes/_NF/Entities/Structures/atm.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/atm.yml
@@ -6,6 +6,8 @@
   - type: ActivatableUIRequiresPower
   - type: ActivatableUI
     singleUser: true
+  - type: Computer
+    board: Null
 
 - type: entity
   name: bank ATM
