--- a/Resources/Prototypes/_NF/Entities/Structures/atm.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/atm.yml
@@ -17,7 +17,7 @@
   abstract: true
   components:
   - type: BankATM
-    CashSlot:
+    cashSlot:
       name: bank-ATM-cashSlot
       insertSound: /Audio/Machines/scanning.ogg
       ejectSound: /Audio/Machines/tray_eject.ogg
@@ -36,7 +36,7 @@
   - type: ContainerContainer
     containers:
       board: !type:Container
-      CashSlot: !type:ContainerSlot
+      bankATM-cashSlot: !type:ContainerSlot
 
 - type: entity
   name: withdraw-only bank ATM
@@ -46,7 +46,7 @@
   abstract: true
   components:
   - type: BankATM
-    CashSlot:
+    cashSlot:
       name: bank-ATM-cashSlot
       insertSound: /Audio/Machines/scanning.ogg
       ejectSound: /Audio/Machines/tray_eject.ogg
@@ -178,7 +178,7 @@
     - map: ["computerLayerKeys"]
       state: id_key
   - type: StationBankATM
-    CashSlot:
+    cashSlot:
       name: station-bank-ATM-cashSlot
       insertSound: /Audio/Machines/scanning.ogg
       ejectSound: /Audio/Machines/tray_eject.ogg
@@ -197,6 +197,6 @@
   - type: ContainerContainer
     containers:
       board: !type:Container
-      CashSlot: !type:ContainerSlot
+      stationBankATM-cashSlot: !type:ContainerSlot
   - type: AccessReader
     access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
