--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
@@ -1,32 +1,114 @@
 # BASE
+- type: entity
+  abstract: true
+  parent: ClothingHeadEVAHelmetBase
+  id: ClothingHeadEVAHelmetWithLightBase
+  name: base space helmet with light
+  components:
+  - type: Sprite
+    sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
+    layers:
+    - state: icon-base
+    - state: icon-reinforced-points
+    - state: icon-visor
+    - state: light-overlay
+      visible: false
+      shader: unshaded
+      map: [ "light" ]
+  - type: HandheldLight
+    addPrefix: false
+    blinkingBehaviourId: blinking
+    radiatingBehaviourId: radiating
+  - type: LightBehaviour
+    behaviours:
+      - !type:FadeBehaviour
+        id: radiating
+        interpolate: Linear
+        maxDuration: 2.0
+        startValue: 3.0
+        endValue: 2.0
+        isLooped: true
+        reverseWhenFinished: true
+      - !type:PulseBehaviour
+        id: blinking
+        interpolate: Nearest
+        maxDuration: 1.0
+        minValue: 0.1
+        maxValue: 2.0
+        isLooped: true
+  - type: Battery # Apparently lights on helmets don't work without batteries. Bummer.
+    maxCharge: 600 #lights drain 3/s but recharge of 2 makes this 1/s. Therefore 600 is 10 minutes of light.
+    startingCharge: 600
+  - type: BatterySelfRecharger
+    autoRecharge: true
+    autoRechargeRate: 2 #recharge of 2 makes total drain 1w / s so max charge is 1:1 with time. Time to fully charge should be 5 minutes. Having recharge gives light an extended flicker period which gives you some warning to return to light area.
+  - type: Appearance
+  - type: ToggleableLightVisuals
+    spriteLayer: light
+    clothingVisuals:
+      head:
+      - state: equipped-head-light
+        shader: unshaded
+  - type: Clothing
+    clothingVisuals:
+      head:
+      - state: equipped-head-base
+      - state: equipped-head-reinforced-points
+      - state: equipped-head-visor
+  - type: PointLight
+    #color: "#adffe6"
+    enabled: false
+    radius: 4
+    energy: 2
+    mask: /Textures/Effects/LightMasks/cone.png
+    autoRot: true
+    netsync: false
 
 # DEPARTMENTAL
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetHydro
   name: botanist EVA helmet
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     sprite: _NF/Clothing/Head/Helmets/eva_hydro.rsi
+    layers:
+    - state: icon
+    - state: light-overlay
+      visible: false
+      shader: unshaded
+      map: [ "light" ]
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_hydro.rsi
+    clothingVisuals:
+      head:
+      - state: equipped-HELMET
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetMailman
   name: mailcarrier EVA helmet
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
     sprite: _NF/Clothing/Head/Helmets/eva_mailman.rsi
+    layers:
+    - state: icon
+    - state: light-overlay
+      visible: false
+      shader: unshaded
+      map: [ "light" ]
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_mailman.rsi
+    clothingVisuals:
+      head:
+      - state: equipped-HELMET
 
 # COLORED DEPARTMENTAL
 ## CONTRACTORS
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetContractor
   name: contractor EVA helmet
   categories: [ HideSpawnMenu ]
@@ -51,7 +133,7 @@
 
 ## COMMAND
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetSr
   name: station representative EVA helmet
   categories: [ HideSpawnMenu ]
@@ -81,7 +163,7 @@
         color: "#fbe6b8"
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetCaptain
   name: captain EVA helmet
   categories: [ HideSpawnMenu ]
@@ -112,7 +194,7 @@
 
 ## ENGINEERING
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetEngineer
   name: engineer EVA helmet
   categories: [ HideSpawnMenu ]
@@ -136,7 +218,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetAtmosTech
   name: atmospheric technician EVA helmet
   categories: [ HideSpawnMenu ]
@@ -163,7 +245,7 @@
 
 ## SUPPLY
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetCargo
   name: cargo EVA helmet
   categories: [ HideSpawnMenu ]
@@ -187,7 +269,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetSalvage
   name: salvage specialist EVA helmet
   categories: [ HideSpawnMenu ]
@@ -212,7 +294,7 @@
 
 ## MEDICAL
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetMedic
   name: medic EVA helmet
   categories: [ HideSpawnMenu ]
@@ -237,7 +319,7 @@
 
 ## SCIENCE
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetScientist
   name: scientist EVA helmet
   categories: [ HideSpawnMenu ]
@@ -264,7 +346,7 @@
 
 ## SERVICE
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetJanitor
   name: janitor EVA helmet
   categories: [ HideSpawnMenu ]
@@ -290,7 +372,7 @@
         color: "#bb5cc9"
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetServiceWorker
   name: service worker EVA helmet
   categories: [ HideSpawnMenu ]
@@ -314,7 +396,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetChaplain
   name: chaplain EVA helmet
   categories: [ HideSpawnMenu ]
@@ -340,7 +422,7 @@
         color: "#ffce5b"
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetBoxerRed
   name: boxer EVA helmet
   categories: [ HideSpawnMenu ]
@@ -364,7 +446,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetBoxerGreen
   name: boxer EVA helmet
   categories: [ HideSpawnMenu ]
@@ -388,7 +470,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetBoxerBlue
   name: boxer EVA helmet
   categories: [ HideSpawnMenu ]
@@ -412,7 +494,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetBoxerYellow
   name: boxer EVA helmet
   categories: [ HideSpawnMenu ]
@@ -436,7 +518,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetBoxerRandom
   name: boxer EVA helmet
   categories: [ HideSpawnMenu ]
@@ -465,7 +547,7 @@
 
 ## WILDCARDS
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetPilot
   name: pilot EVA helmet
   categories: [ HideSpawnMenu ]
@@ -489,7 +571,7 @@
       - state: equipped-head-visor
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetMercenary
   name: mercenary EVA helmet
   categories: [ HideSpawnMenu ]
@@ -515,7 +597,7 @@
         color: "#f5fc95"
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetPrivateSec
   name: private security EVA helmet
   categories: [ HideSpawnMenu ]
@@ -542,7 +624,7 @@
 
 ## NFSD
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetNfsd
   name: nfsd EVA helmet
   categories: [ HideSpawnMenu ]
@@ -569,7 +651,7 @@
 
 ## PLAYER FACTIONS
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetLvhi
   name: lvhi EVA helmet
   categories: [ HideSpawnMenu ]
@@ -595,7 +677,7 @@
         color: "#283846"
 
 - type: entity
-  parent: ClothingHeadEVAHelmetBase
+  parent: ClothingHeadEVAHelmetWithLightBase
   id: ClothingHeadEVAHelmetArcadia
   name: arcadia EVA helmet
   categories: [ HideSpawnMenu ]
