--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Basic/sawn_pka.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Basic/sawn_pka.yml
@@ -12,8 +12,10 @@
     size: Small
     shape:
     - 0,0,1,0
+  - type: RechargeBasicEntityAmmo
+    rechargeCooldown: 1
   - type: Gun
-    fireRate: 8
+    fireRate: 0.9
     selectedMode: FullAuto
     availableModes:
     - FullAuto
