--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Basic/sawn_pka.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Basic/sawn_pka.yml
@@ -12,6 +12,8 @@
     size: Small
     shape:
     - 0,0,1,0
+  - type: UseDelay
+    delay: 1
   - type: RechargeBasicEntityAmmo
     rechargeCooldown: 1
   - type: Gun
